[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Juhani Kauppi", email="jkauppi@student.hive.fi" },
]
description = "Hive Coding School. Project name: Python 0 Starting ex09"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
		"Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
		"Operating System :: MacOS",
]

[project.urls]
